--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -64,10 +64,89 @@
             </div>
         </div>
 
-        <div class="container-fluid contactBgJ">
-            
+
+        <div class="row contactBgJ evenJ" style="padding-top: 40px; padding-bottom: 45px">
+            <div class="card" style="width: 545px;">
+                <div class="centerJ">
+                    <img src="../assets/Alarm.png" class="card-img-top contactIconsJ" alt="...">
+                </div>
+                <div class="card-body">
+                    <h3 class="txtCenterJ">SCHEDULE</h3>
+                    <div class="row">
+                        <div class="col">
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                            <div class="row txtCenterJ">
+                                <p>Monday:</p>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                            <div class="row">
+                                <p>9 am - 5:00 pm</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="width: 545px;">
+                <div class="centerJ">
+                    <img src="../assets/PhoneCall.png" class="card-img-top contactIconsJ" alt="...">
+                </div>
+                <div class="card-body">
+                    <h3 class="txtCenterJ">ORDER OVER THE PHONE</h3>
+                    <p class="card-text txtCenterJ">Interested in showing up and having your order ready for you? Give us a call and give us your order over the phone</p>
+                    <p class="card-text txtCenterJ">(209) 475-0652</p>
+
+                </div>
+            </div>
+            <div class="card" style="width: 545px;">
+                <div class="centerJ">
+                    <img src="../assets/MapPin.png" class="card-img-top contactIconsJ" alt="...">
+                </div>
+
+                <div class="card-body">
+                    <h3 class="txtCenterJ">ORDER IN PERSON</h3>
+                    <p class="card-text txtCenterJ">Are you not in the mood to make a phone call or you aren’t much of an online person? If so, that’s completely fine, feel free to head to our establishment and order at the register</p>
+                    <p class="card-text txtCenterJ">3330 E Hammer Ln Ste C Stockton, CA 95212</p>
+                </div>
+            </div>
         </div>
     </div>
+
 
 
     <hr class="yellowJ hrLineJ mt-5">
