--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -66,7 +66,7 @@
 
 
         <div class="row contactBgJ evenJ" style="padding-top: 40px; padding-bottom: 45px">
-            <div class="card" style="width: 545px;">
+            <div class="card cardRadiusJ" style="width: 545px;">
                 <div class="centerJ">
                     <img src="../assets/Alarm.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" style="width: 545px;">
+            <div class="card cardRadiusJ" style="width: 545px;">
                 <div class="centerJ">
                     <img src="../assets/PhoneCall.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
@@ -133,7 +133,7 @@
 
                 </div>
             </div>
-            <div class="card" style="width: 545px;">
+            <div class="card cardRadiusJ" style="width: 545px;">
                 <div class="centerJ">
                     <img src="../assets/MapPin.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
@@ -149,41 +149,41 @@
 
 
 
-    <hr class="yellowJ hrLineJ mt-5">
+    <hr class="yellowJ hrLineJ mt-3">
 
     <div class="container-fluid footerPaddingJ">
         <div class="row">
             <div class="col-3">
-                <div class="row yellowJ">
-                    <h2>Best Sandwiches</h2>
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">Best Sandwiches</h2>
                 </div>
-                <div class="row yellowJ">
-                    <h2>& Smoothies</h2>
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">& Smoothies</h2>
                 </div>
             </div>
             <div class="col-9">
                 <div class="row">
                     <div class="col">
                         <div class="row">
-                            <p class="yellowJ">Hours</p>
-                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                            <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="row">
-                            <p class="yellowJ">Contact Us</p>
-                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
                     </div>
 
                     <div class="col">
                         <div class="row">
-                            <p class="yellowJ">Links</p>
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                         </div>
                         <div class="row">
                             <img src="" alt="">
