--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -21,13 +21,26 @@
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link yellowJ" href="../index.html">Logo/Home</a>
-                            <a class="nav-link yellowJ" href="./Menu.html">Menu</a>
-                            <a class="nav-link yellowJ" href="./ContactUs.html">Contact Us</a>
-                            <a class="nav-link yellowJ" aria-current="page" href="./AboutUs.html">About Us</a>
-                            <a class="nav-link yellowJ" href="./BanhMi.html">Banh Mi?</a>
+                    <div class="collapse navbar-collapse centerJ" style="width: 100%;" id="navbarNavAltMarkup">
+                        <div class="" style="width: 100%;">
+                            <div class="row">
+                                <div class="col">
+                                    <div class="row">
+                                        <a class="nav-link yellowJ navLinksJ" href="../index.html">Logo/Home</a>
+                                        <a class="nav-link yellowJ navLinksJ" href="./Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ" href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ" aria-current="page" href="./AboutUs.html">About
+                                            Us</a>
+                                        <a class="nav-link yellowJ navLinksJ" href="./BanhMi.html">Banh Mi?</a>
+                                    </div>
+                                </div>
+
+                                <div class="col-1 centerJ">
+                                    <img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt="">
+                                </div>
+                                <div class="col"></div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -128,7 +141,8 @@
                 </div>
                 <div class="card-body">
                     <h3 class="txtCenterJ">ORDER OVER THE PHONE</h3>
-                    <p class="card-text txtCenterJ">Interested in showing up and having your order ready for you? Give us a call and give us your order over the phone</p>
+                    <p class="card-text txtCenterJ">Interested in showing up and having your order ready for you? Give
+                        us a call and give us your order over the phone</p>
                     <p class="card-text txtCenterJ">(209) 475-0652</p>
 
                 </div>
@@ -140,7 +154,9 @@
 
                 <div class="card-body">
                     <h3 class="txtCenterJ">ORDER IN PERSON</h3>
-                    <p class="card-text txtCenterJ">Are you not in the mood to make a phone call or you aren’t much of an online person? If so, that’s completely fine, feel free to head to our establishment and order at the register</p>
+                    <p class="card-text txtCenterJ">Are you not in the mood to make a phone call or you aren’t much of
+                        an online person? If so, that’s completely fine, feel free to head to our establishment and
+                        order at the register</p>
                     <p class="card-text txtCenterJ">3330 E Hammer Ln Ste C Stockton, CA 95212</p>
                 </div>
             </div>
@@ -153,7 +169,7 @@
 
     <div class="container-fluid footerPaddingJ">
         <div class="row">
-            <div class="col-3">
+            <div class="col-4" style="padding-left: 3%;">
                 <div class="row yellowJ abrilFatfaceJ">
                     <h2 class="footerFontSize3">Best Sandwiches</h2>
                 </div>
@@ -161,7 +177,7 @@
                     <h2 class="footerFontSize3">& Smoothies</h2>
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col" style="padding-left: 2%;">
                 <div class="row">
                     <div class="col">
                         <div class="row">
@@ -186,9 +202,12 @@
                             <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                         </div>
                         <div class="row">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
+                            <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
+                                    alt=""></a>
                         </div>
                     </div>
                 </div>
