--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -21,24 +21,25 @@
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse centerJ" style="width: 100%;" id="navbarNavAltMarkup">
+                    <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <a class="nav-link yellowJ navLinksJ" href="../index.html">Logo/Home</a>
-                                        <a class="nav-link yellowJ navLinksJ" href="./Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ" href="./ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ" aria-current="page" href="./AboutUs.html">About
+                                
+                                <div class="col centerJ">
+                                    <div class="row evenJ" style="width: 700px; padding-top: 40px;">
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;" href="./Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;" href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page" href="./AboutUs.html">About
                                             Us</a>
-                                        <a class="nav-link yellowJ navLinksJ" href="./BanhMi.html">Banh Mi?</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;" href="./BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
                                 <div class="col-1 centerJ">
-                                    <img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt="">
+                                    <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt=""></a>
                                 </div>
-                                <div class="col"></div>
+                                <div class="col yugiJ alignCenterJ"><h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches & Smothies</h1></div>
+                                
                             </div>
 
                         </div>
