--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link yellowJ" aria-current="page" href="./index.html">Logo/Home</a>
-                            <a class="nav-link yellowJ" href="./pages/Menu.html">Menu</a>
-                            <a class="nav-link yellowJ" href="./pages/ContactUs.html">Contact Us</a>
-                            <a class="nav-link yellowJ" href="./pages/AboutUs.html">About Us</a>
-                            <a class="nav-link yellowJ" href="./pages/BanhMi.html">Banh Mi?</a>
+                        <div class="" style="width: 100%;">
+                            <div class="row">
+                                
+                                <div class="col centerJ">
+                                    <div class="row evenJ" style="width: 700px; padding-top: 40px;">
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;" href="./pages/Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;" href="./pages/ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page" href="./pages/AboutUs.html">About
+                                            Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;" href="./pages/BanhMi.html">Banh Mi?</a>
+                                    </div>
+                                </div>
+
+                                <div class="col-1 centerJ">
+                                    <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                                </div>
+                                <div class="col yugiJ alignCenterJ"><h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches & Smothies</h1></div>
+                                
+                            </div>
+
                         </div>
                     </div>
                 </div>
