--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -57,9 +57,9 @@
                     <div class="col">
                         <div class="container-fluid">
                             <div class="row contactUsPaddingJ">
-                                <h2>Don’t Be Afraid To Give Us A Call</h2>
+                                <h2 class="abrilFatfaceJ" style="font-size: 48px;">Don’t Be Afraid To Give Us A Call</h2>
                             </div>
-                            <div class="row contactUsPaddingJ">
+                            <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ">
                                 <p>Want to order a delicious banh mi? We’d love to serve you some food. Here’s some
                                     information that’ll help you order a fantastic meal</p>
                             </div>
