--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -59,8 +59,8 @@
                             <div class="row contactUsPaddingJ">
                                 <h2 class="abrilFatfaceJ" style="font-size: 48px;">Don’t Be Afraid To Give Us A Call</h2>
                             </div>
-                            <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ">
-                                <p>Want to order a delicious banh mi? We’d love to serve you some food. Here’s some
+                            <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ sansCollectionJ">
+                                <p style="width: 87%;">Want to order a delicious banh mi? We’d love to serve you some food. Here’s some
                                     information that’ll help you order a fantastic meal</p>
                             </div>
                         </div>
@@ -85,10 +85,10 @@
                     <img src="../assets/Alarm.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
                 <div class="card-body">
-                    <h3 class="txtCenterJ">SCHEDULE</h3>
+                    <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">SCHEDULE</h3>
                     <div class="row">
                         <div class="col">
-                            <div class="row txtCenterJ">
+                            <div class="row txtCenterJ ">
                                 <p>Monday:</p>
                             </div>
                             <div class="row txtCenterJ">
@@ -141,7 +141,7 @@
                     <img src="../assets/PhoneCall.png" class="card-img-top contactIconsJ" alt="...">
                 </div>
                 <div class="card-body">
-                    <h3 class="txtCenterJ">ORDER OVER THE PHONE</h3>
+                    <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER OVER THE PHONE</h3>
                     <p class="card-text txtCenterJ">Interested in showing up and having your order ready for you? Give
                         us a call and give us your order over the phone</p>
                     <p class="card-text txtCenterJ">(209) 475-0652</p>
@@ -154,7 +154,7 @@
                 </div>
 
                 <div class="card-body">
-                    <h3 class="txtCenterJ">ORDER IN PERSON</h3>
+                    <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER IN PERSON</h3>
                     <p class="card-text txtCenterJ">Are you not in the mood to make a phone call or you aren’t much of
                         an online person? If so, that’s completely fine, feel free to head to our establishment and
                         order at the register</p>
