contact us page

--- a/pages/ContactUs.html
+++ b/pages/ContactUs.html
@@ -24,22 +24,30 @@
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-                                
+
                                 <div class="col centerJ">
                                     <div class="row evenJ" style="width: 700px; padding-top: 40px;">
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;" href="./Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;" href="./ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page" href="./AboutUs.html">About
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
+                                            href="./Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
+                                            href="./ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;"
+                                            aria-current="page" href="./AboutUs.html">About
                                             Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;" href="./BanhMi.html">Banh Mi?</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
+                                            href="./BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
                                 <div class="col-1 centerJ">
-                                    <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                                    <a href="../index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
+                                            alt=""></a>
                                 </div>
-                                <div class="col yugiJ alignCenterJ"><h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches & Smothies</h1></div>
-                                
+                                <div class="col yugiJ alignCenterJ">
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                                        Smothies</h1>
+                                </div>
+
                             </div>
 
                         </div>
@@ -57,10 +65,12 @@
                     <div class="col">
                         <div class="container-fluid">
                             <div class="row contactUsPaddingJ">
-                                <h2 class="abrilFatfaceJ" style="font-size: 48px;">Don’t Be Afraid To Give Us A Call</h2>
+                                <h2 class="abrilFatfaceJ" style="font-size: 48px;">Don’t Be Afraid To Give Us A Call
+                                </h2>
                             </div>
                             <div class="row contactUsPaddingJ2 dontBeAfraidBodySizeJ sansCollectionJ">
-                                <p style="width: 87%;">Want to order a delicious banh mi? We’d love to serve you some food. Here’s some
+                                <p style="width: 87%;">Want to order a delicious banh mi? We’d love to serve you some
+                                    food. Here’s some
                                     information that’ll help you order a fantastic meal</p>
                             </div>
                         </div>
@@ -87,50 +97,50 @@
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">SCHEDULE</h3>
                     <div class="row">
-                        <div class="col">
-                            <div class="row txtCenterJ ">
-                                <p>Monday:</p>
+                        <div class="col sansCollectionJ contactUsBodySizeJ">
+                            <div class="row contactRowPaddingJ contactBodyTopPaddingJ">
+                                Monday:
                             </div>
-                            <div class="row txtCenterJ">
-                                <p>Monday:</p>
+                            <div class="row contactRowPaddingJ">
+                                Tuesday:
                             </div>
-                            <div class="row txtCenterJ">
-                                <p>Monday:</p>
+                            <div class="row redJ contactRowPaddingJ">
+                                Wednesday:
                             </div>
-                            <div class="row txtCenterJ">
-                                <p>Monday:</p>
+                            <div class="row contactRowPaddingJ">
+                                Thursday:
                             </div>
-                            <div class="row txtCenterJ">
-                                <p>Monday:</p>
+                            <div class="row contactRowPaddingJ">
+                                Friday:
                             </div>
-                            <div class="row txtCenterJ">
-                                <p>Monday:</p>
+                            <div class="row contactRowPaddingJ">
+                                Saturday:
                             </div>
-                            <div class="row txtCenterJ">
-                                <p>Monday:</p>
+                            <div class="row contactRowPaddingJ">
+                                Sunday:
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="row">
-                                <p>9 am - 5:00 pm</p>
+                        <div class="col sansCollectionJ contactUsBodySizeJ">
+                            <div class="row contactBodyTopPaddingJ">
+                                9:00 am - 5:00 pm
                             </div>
                             <div class="row">
-                                <p>9 am - 5:00 pm</p>
+                                9:00 am - 5:00 pm
+                            </div>
+                            <div class="row redJ">
+                                CLOSED
                             </div>
                             <div class="row">
-                                <p>9 am - 5:00 pm</p>
+                                9:00 am - 5:00 pm
                             </div>
                             <div class="row">
-                                <p>9 am - 5:00 pm</p>
+                                9:00 am - 5:00 pm
                             </div>
                             <div class="row">
-                                <p>9 am - 5:00 pm</p>
+                                9:00 am - 5:00 pm
                             </div>
-                            <div class="row">
-                                <p>9 am - 5:00 pm</p>
-                            </div>
-                            <div class="row">
-                                <p>9 am - 5:00 pm</p>
+                            <div class="row" style="padding-bottom: 15px;">
+                                9:00 am - 5:00 pm
                             </div>
                         </div>
                     </div>
@@ -142,9 +152,16 @@
                 </div>
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER OVER THE PHONE</h3>
-                    <p class="card-text txtCenterJ">Interested in showing up and having your order ready for you? Give
-                        us a call and give us your order over the phone</p>
-                    <p class="card-text txtCenterJ">(209) 475-0652</p>
+                    <div class="centerJ contactBodyTopPaddingJ">
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ center " style="width: 70%;">
+                            Interested in showing up and having your order ready for you? Give
+                            us a call and give us your order over the phone</p>
+                    </div>
+
+                    <div class="centerJ">
+                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ"
+                            style="padding-top: 25px; text-decoration: none;">(209) 475-0652</a>
+                    </div>
 
                 </div>
             </div>
@@ -155,10 +172,18 @@
 
                 <div class="card-body">
                     <h3 class="txtCenterJ dontBeAfraidBodySizeJ abrilFatfaceJ">ORDER IN PERSON</h3>
-                    <p class="card-text txtCenterJ">Are you not in the mood to make a phone call or you aren’t much of
-                        an online person? If so, that’s completely fine, feel free to head to our establishment and
-                        order at the register</p>
-                    <p class="card-text txtCenterJ">3330 E Hammer Ln Ste C Stockton, CA 95212</p>
+                    <div class="centerJ">
+                        <p class="card-text txtCenterJ contactUsBodySizeJ sansCollectionJ contactBodyTopPaddingJ"
+                            style="width: 90%;">Are you not in the mood to make a phone call or you aren’t much of
+                            an online person? If so, that’s completely fine, feel free to head to our establishment and
+                            order at the register</p>
+                    </div>
+                    <div class="centerJ">
+                        <a href="" class="card-text txtCenterJ sansCollectionJ blueJ"
+                            style="padding-top: 25px; width: 80%; text-decoration: none;">3330 E Hammer Ln Ste C
+                            Stockton, CA 95212</a>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -169,7 +194,7 @@
     <hr class="yellowJ hrLineJ mt-3">
 
     <div class="container-fluid footerPaddingJ">
-        <div class="row">
+        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
             <div class="col-4" style="padding-left: 3%;">
                 <div class="row yellowJ abrilFatfaceJ">
                     <h2 class="footerFontSize3">Best Sandwiches</h2>
